TASK: Set a bottom margin for full-width grid items on smaller screens to avoid conflicts with contents

--- a/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Molecules/_Grid.scss
+++ b/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Molecules/_Grid.scss
@@ -43,3 +43,10 @@ $grid-gutter: $column-gutter / 2;
 		clear: both;
 	}
 }
+
+//
+// General adjustment for full-width grid items on smaller screens.
+//
+.u-w1\/1.gi {
+	margin-bottom: $basic-spacing+px;
+}
