--- a/Packages/Sites/Neos.NeosIo/Resources/Public/Styles/Main.css
+++ b/Packages/Sites/Neos.NeosIo/Resources/Public/Styles/Main.css
@@ -1914,6 +1914,9 @@ sub {
   .u-w1\/1.u-wm6\/12.u-wl3\/12.neos-contentcollection:nth-child(odd) {
     clear: both; } }
 
+.u-w1\/1.gi {
+  margin-bottom: 26px; }
+
 /**
  * Media:
  * Displays a contents besides an image/video or another media node.
